# agno1-skill

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  DevTracking.md  README.md  main.py  mypy.ini  pyproject.toml
.codebuddy/.rules/: read-AGENTS.md.mdc
.trae/rules/: project_rules.md
agents/: README.md  __init__.py  registry.py
agents/roles/: __init__.py  specs.py
agents/skills/agno1-hr-screener/: SKILL.md  公司和岗位介绍.md  招聘困境.md  招聘困境一句话总结.md  角色设定.md
agents/skills/docviz-doc-diagram-assistant/: SKILL.md
agno1/: agent.py  agent_os.py  app.py  database.py  knowledge.py  nano_vecdb.py  utils.py
agno1/browser_automation/: README.md  __init__.py  base.py  diagnostics.py  errors.py  gemini.py  gpt.py  manager.py  run_from_spec.py  runspec_executor.py  selectors.py  spec.py  utils.py  zhaopin_resume.py
agno1/browser_automation/zhaopin/: __init__.py
agno1/embeddings/: __init__.py  doubao.py
agno1/pipelines/: docviz_diagram_chatgpt.py  zhaopin_resume_screener.py
agno1/pipelines/zhaopin/: __init__.py  notify.py
agno1/templates/: navigation.html
artifacts/zhaopin/boss/: boss_screener_20260303_101223.json  boss_screener_20260303_101329.json  boss_screener_20260303_102637.json  boss_screener_20260303_133524.json  (+6 more)
artifacts/zhaopin_screener/: screener_report.json  screener_report_20260302_154435.json  screener_report_20260302_155934.json  screener_report_20260302_161623.json
docs/: DOUBAO_EMBEDDING.md
docs/pipelines/: PIPELINES.md  docviz_diagram.md
jobs/docviz_diagram/: config.yaml
knowledge/agno/: README.md
scripts/: run_pipeline.py
(+79 files in other folders)
